adding current status

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -7,6 +7,9 @@ html {
 }
 body {
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
   background-color: rgba(40, 38, 38, 0.973);
 }
@@ -15,9 +18,7 @@ body {
   width: 100vw;
   overflow: hidden;
 }
-.content {
-  display: flex;
-}
+
 button {
   user-select: none;
 }
