--- a/client/src/styles/pdf.scss
+++ b/client/src/styles/pdf.scss
@@ -1,4 +1,45 @@
-.pdf-body{
-    color:white;
-    list-style-type:none;
+.pdf-body {
+  color: #ffffff;
+  list-style-type: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  justify-content: center;
+  gap: 1rem;
+  padding: 20px;
+  .pdf-item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: rgba(112, 112, 112, 0.432);
+    padding: 15px;
+    border-radius: 5px;
+    transition: all 0.3s ease-in-out;
+  }
+
+  input[type="checkbox"] {
+    scale: 1.5;
+  }
+  .pdf-button {
+    border: none;
+    background: none;
+    color: #ffffff;
+    &:hover {
+      color: #666;
+    }
+    &:active {
+      color: #363535;
+    }
+  }
+  .fa-icon {
+    font-size: 24px;
+    &:hover {
+      color: #666;
+    }
+  }
+}
+
+.button-group {
+  display: flex;
+  justify-content: center;
+  gap: 10%;
 }
