--- a/client/src/styles/pdf.css
+++ b/client/src/styles/pdf.css
@@ -47,11 +47,23 @@
   gap: 10%;
 }
 .button-group button {
+  border: none;
+  height: 2rem;
+  border-radius: 5px;
   cursor: pointer;
   margin: 10px 0;
 }
-.button-group .link {
+.button-group button:active {
+  color: white;
+  background: #6d6d6d;
+}
+.button-group button a {
+  color: black;
   text-decoration: none;
+}
+.button-group button a:active {
+  color: white;
+  background: #6d6d6d;
 }
 
 @media (max-width: 768px) {
