--- a/client/src/styles/form.css
+++ b/client/src/styles/form.css
@@ -1,59 +1,39 @@
 .form-content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 50%;
-  margin: 0 auto;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
-  border-radius: 8px;
-}
-.form-content p {
-  color: white;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
-}
-.form-content form {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100%;
-}
-.form-content form label {
   color: white;
 }
-.form-content form input {
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+.form-content .current-form-label {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0;
+}
+.form-content .current-form {
   width: 80%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 16px;
-  color: #333;
 }
-.form-content form button {
-  padding: 10px 20px;
-  margin: 10px;
-  border: none;
-  border-radius: 4px;
-  background-color: #575757;
-  color: #fff;
-  cursor: pointer;
-}
-.form-content form button:hover {
-  background-color: #333;
-}
-.form-content form button:active {
-  background-color: #555;
-}
-.form-content .page-count {
+.form-content p {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-  color: lightgrey;
+}
+.form-content .form-button-group {
+  padding: 1rem 0;
+  gap: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+}
+.form-content .form-button-group button {
+  text-align: center;
+}
+.form-content .form-page-counter {
+  display: flex;
+  justify-content: flex-end;
+  padding: 1rem 0;
+}
+.form-content .form-page-counter p {
+  margin: 0 1rem;
 }/*# sourceMappingURL=form.css.map */
