--- a/client/src/styles/forms.css
+++ b/client/src/styles/forms.css
@@ -1,21 +1,23 @@
 .queue {
   display: flex;
-  margin: 0;
+  align-items: center;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
   overflow-x: auto;
   white-space: nowrap;
+  height: 5vh;
 }
 .queue p {
   color: white;
-  padding: 0 2rem;
+  padding-left: 2rem;
+  margin: 0;
 }
 .queue .queue-list {
+  display: flex;
   width: 85%;
   list-style-type: none;
-  display: flex;
-  align-items: center;
   gap: 2rem;
   padding-right: 1rem;
+  margin: 0;
 }
 .queue .queue-list li {
   font-size: 14px;
