--- a/client/src/styles/navbar.css
+++ b/client/src/styles/navbar.css
@@ -13,21 +13,35 @@
           user-select: none;
   color: rgb(62, 213, 112);
 }
-.navbar button {
+.navbar .link {
+  text-decoration: none;
+  color: white;
+  padding-right: 2rem;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+.navbar .link:hover {
+  color: rgba(255, 255, 255, 0.801);
+}
+.navbar .link:active {
+  color: rgba(255, 255, 255, 0.545);
+}
+.navbar .link button {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
   all: unset;
 }
-.navbar button .icon {
+.navbar .link button .icon {
   padding-right: 2rem;
   color: white;
   font-size: x-large;
 }
-.navbar button .icon:hover {
+.navbar .link button .icon:hover {
   color: rgba(255, 255, 255, 0.801);
 }
-.navbar button .icon:active {
+.navbar .link button .icon:active {
   scale: 1.1;
   color: rgba(255, 255, 255, 0.545);
 }
