--- a/client/src/app.css
+++ b/client/src/app.css
@@ -3,7 +3,6 @@ html {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
 }
 body {
   height: 100vh;
@@ -16,7 +15,7 @@ body {
 #root {
   height: 100vh;
   width: 100vw;
-  overflow: hidden;
+  overflow-y: scroll;
 }
 
 button {
